# Altek_3D_Camera

./: Altek_SDK.txt  CMakeLists.txt  README.md  build_al3d_sdk_raspberry_pi4_20220510.txt  build_realsense_viewer_ubuntu1804.txt  build_realsense_viewer_ubuntu2004.txt  d435_SDK.txt  realsense-viewer_RBE_scr_20211027.txt  starlight_term.txt
.github/workflows/: buildsCI.yaml  main.yaml
CMake/: lrs_options_sbc.cmake
common/: CMakeLists.txt  al-utilities.cpp  al-utilities.h  calibration-model.cpp  calibration-model.h  fw-update-helper.cpp  model-views.cpp  model-views.h  ux-window.cpp  viewer.cpp
common/res/: icon.h  int-rs-splash.hpp
common/utilities/time/: waiting-on.h
config/: 99-realsense-libusb.rules
doc/: installation_windows.md  record-and-playback.md
examples/: CMakeLists.txt
examples/al-test/: CMakeLists.txt  al-test.cpp
examples/capture/: rs-capture.cpp
examples/hello-realsense/: rs-hello-realsense.cpp
examples/measure/: rs-measure.cpp
examples/multicam_ai/: CMakeLists.txt  rs-multicam-ai.cpp
examples/multicam_ai_result_only/: CMakeLists.txt  rs-multicam-ai-result-only.cpp
examples/multicam_time_sync/: CMakeLists.txt  rs-multicam-time-sync.cpp
examples/pointcloud/: rs-pointcloud.cpp
include/librealsense2/h/: rs_device.h  rs_frame.h  rs_option.h  rs_sensor.h  rs_types.h
include/librealsense2/hpp/: rs_device.hpp  rs_frame.hpp
scripts/: al3d_metadata_win10.ps1  realsense-camera-formats-bionic-hwe-5.4.patch  realsense-camera-formats-focal-hwe-5.11.patch  realsense-camera-formats-focal-hwe-5.13.patch  realsense-camera-formats-focal-hwe-5.15.patch  realsense-camera-formats-focal-master.patch  realsense-camera-formats-jammy-master.patch  realsense-camera-formats-xenial-hwe.patch  realsense-camera-formats-xenial-master.patch  realsense-metadata-jammy-master.patch
src/: CMakeLists.txt  archive.cpp  archive.h  auto-calibrated-device.h  context.cpp  device.cpp  device.h  error-handling.cpp  firmware_logger_device.cpp  hw-monitor.cpp  image.cpp  option.h  realsense.def  rs.cpp  sensor.cpp  sensor.h  source.h  sync.cpp  types.cpp
src/altek/: CMakeLists.txt  alOpenCVK.h  alVersion.h  alVersion.h.in
src/core/: options.h  streaming.h
src/ds5/: CMakeLists.txt  al3d-ai.cpp  al3d-ai.h  ds5-auto-calibration.cpp  ds5-auto-calibration.h  ds5-color.cpp  ds5-color.h  ds5-device.cpp  ds5-device.h  ds5-factory.cpp  ds5-motion.cpp  ds5-options.cpp  ds5-options.h  ds5-private.cpp  ds5-private.h
src/ds5/advanced_mode/: advanced_mode.cpp
src/ethernet/: IRsRtsp.h  RsRtspClient.cpp  ip_device.cpp
src/fw-update/: fw-update-device-interface.h  fw-update-device.cpp  fw-update-device.h  fw-update-factory.cpp
src/ivcam/: sr300.h
src/l500/: l500-device.cpp  l500-device.h
src/libusb/: device-libusb.h  endpoint-libusb.h  interface-libusb.h  messenger-libusb.cpp  messenger-libusb.h
src/linux/: backend-hid.cpp  backend-v4l2.cpp
src/media/playback/: playback_device.h
src/media/record/: record_device.h
src/mf/: mf-backend.cpp  mf-hid.cpp  mf-uvc.cpp
src/proc/: depth-formats-converter.cpp  depth-formats-converter.h  spatial-filter.cpp  spatial-filter.h  synthetic-stream.cpp  synthetic-stream.h  temporal-filter.cpp  temporal-filter.h
src/usb/: usb-device.h  usb-endpoint.h  usb-interface.h  usb-messenger.h  usb-types.h
src/usbhost/: device-usbhost.cpp  device-usbhost.h  endpoint-usbhost.h  interface-usbhost.cpp  interface-usbhost.h  messenger-usbhost.cpp  messenger-usbhost.h  request-usbhost.cpp  usbhost.c  usbhost.h
src/uvc/: uvc-device.cpp  uvc-device.h  uvc-streamer.cpp  uvc-streamer.h  uvc-types.h
src/winusb/: device-winusb.cpp  device-winusb.h  endpoint-winusb.h  interface-winusb.h  messenger-winusb.cpp  messenger-winusb.h
tools/fw-update/: rs-fw-update.cpp
tools/realsense-viewer/: realsense-viewer.cpp
tools/rs-server/: RsSimpleRTPSink.cpp
unit-tests/: run-unit-tests.py  unit-test-long.cpp
wrappers/python/: python.hpp
(+14 files in other folders)
